edited index html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset=utf-8>
-    <title>My first three.js app</title>
+    <title>Chris Rohrer</title>
     <style>
         body { margin: 0; }
         canvas { width: 100%; height: 100% }
@@ -10,27 +10,59 @@
 </head>
 <body>
 <script src="js/three.js"></script>
+<script src="js/OrbitControls.js"></script>
 <script>
     // Our Javascript will go here.
+
+    //Creating Scene
     var scene = new THREE.Scene();
     var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-
     var renderer = new THREE.WebGLRenderer();
     renderer.setSize( window.innerWidth, window.innerHeight );
     document.body.appendChild( renderer.domElement );
 
+    //Adding Responsiveness
+    window.addEventListener( 'resize', onWindowResize, false );
+
+    function onWindowResize() {
+
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize( window.innerWidth, window.innerHeight );
+
+    }
+    //end of "Adding Responsiveness"
+
+    //Adding Controls
+    var controls = new THREE.OrbitControls( camera );
+
+    //controls.update() must be called after any manual changes to the camera's transform
+    controls.update();
+    //end of "Adding Controls"
+
     var geometry = new THREE.BoxGeometry( 1, 1, 1 );
-    var material = new THREE.MeshBasicMaterial( { color: 0xffffff } );
+    var material = new THREE.MeshPhongMaterial( { color: 0xffffff } );
     var cube = new THREE.Mesh( geometry, material );
     scene.add( cube );
+
+    var ambientLight = new THREE.AmbientLight( 0x101010 ); // soft white light
+    scene.add( ambientLight );
+
+    // White directional light at half intensity shining from the top.
+    var directionalLight = new THREE.DirectionalLight( 0xffffff, 0.5 );
+    scene.add( directionalLight );
 
     camera.position.z = 5;
 
     function animate() {
         requestAnimationFrame( animate );
 
+        //rotate cube
         cube.rotation.x += 0.01;
         cube.rotation.y += 0.01;
+
+        //update controls
+        controls.update();
 
         renderer.render( scene, camera );
     }
