--- a/index.html
+++ b/index.html
@@ -40,19 +40,46 @@
     controls.update();
     //end of "Adding Controls"
 
-    var geometry = new THREE.BoxGeometry( 1, 1, 1 );
-    var material = new THREE.MeshPhongMaterial( { color: 0xffffff } );
-    var cube = new THREE.Mesh( geometry, material );
-    scene.add( cube );
-
+    //Setup Lighting
     var ambientLight = new THREE.AmbientLight( 0x101010 ); // soft white light
     scene.add( ambientLight );
 
-    // White directional light at half intensity shining from the top.
-    var directionalLight = new THREE.DirectionalLight( 0xffffff, 0.5 );
-    scene.add( directionalLight );
+    renderer.shadowMap.enabled = true;
+    renderer.shadowMap.type = THREE.PCFSoftShadowMap; // default THREE.PCFShadowMap
 
-    camera.position.z = 5;
+    //Create a DirectionalLight and turn on shadows for the light
+    var light = new THREE.DirectionalLight( 0xffffff, 0.5  );
+    light.position.set( 0, 1, 0 ); 			//default; light shining from top
+    light.castShadow = true;            // default false
+    scene.add( light );
+
+    //Set up shadow properties for the light
+    light.shadow.mapSize.width = 512;  // default
+    light.shadow.mapSize.height = 512; // default
+    light.shadow.camera.near = 0.5;    // default
+    light.shadow.camera.far = 500;     // default
+
+
+    //Create a helper for the shadow camera (optional)
+    //var helper = new THREE.CameraHelper( light.shadow.camera );
+    //scene.add( helper );
+    //end of lighting
+
+    var geometry = new THREE.BoxGeometry( 1, 1, 1 );
+    var material = new THREE.MeshPhongMaterial( { color: 0xffffff } );
+    var cube = new THREE.Mesh( geometry, material );
+    cube.castShadow = true;
+    scene.add( cube );
+
+    var pGeometry = new THREE.PlaneGeometry( 3, 3, 1 );
+    var pMaterial = new THREE.MeshPhongMaterial( {color: 0xf0f0f0, side: THREE.DoubleSide} );
+    var plane = new THREE.Mesh( pGeometry, pMaterial );
+    plane.position.y = -.9;
+    plane.rotation.x = Math.PI / 2;
+    plane.receiveShadow = true;
+    scene.add( plane );
+
+    camera.position.x = 5;
 
     function animate() {
         requestAnimationFrame( animate );
