added pixi.js testfile

--- a/threejs/test.html
+++ b/threejs/test.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script src="js/pixi.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
 <script src="js/three.js"></script>
 <script>
     width = window.innerWidth;
