--- a/threejs/index.html
+++ b/threejs/index.html
@@ -12,17 +12,59 @@
 <script src="js/three.js"></script>
 <script src="js/OrbitControls.js"></script>
 <script>
-    // Our Javascript will go here.
+    let camera, scene, renderer;
 
-    //Creating Scene
-    var scene = new THREE.Scene();
-    var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-    var renderer = new THREE.WebGLRenderer();
-    renderer.setSize( window.innerWidth, window.innerHeight );
-    document.body.appendChild( renderer.domElement );
+    init();
+    animate();
 
-    //Adding Responsiveness
-    window.addEventListener( 'resize', onWindowResize, false );
+    function init() {
+
+        camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 0.01, 10 );
+        camera.position.set( 0, 5, 2 );
+
+        scene = new THREE.Scene();
+
+        const geometry = new THREE.BoxGeometry( 0.5, 0.5, 0.5 );
+        const material = new THREE.MeshNormalMaterial();
+
+        // generate some boxes in a column
+
+        for ( let i = 0; i <= 10; i ++ ) {
+
+            const mesh = new THREE.Mesh( geometry, material );
+            mesh.position.y = i;
+            scene.add( mesh );
+
+        }
+
+        renderer = new THREE.WebGLRenderer( { antialias: true } );
+        renderer.setPixelRatio( window.devicePixelRatio );
+        renderer.setSize( window.innerWidth, window.innerHeight );
+        document.body.appendChild( renderer.domElement );
+
+        window.addEventListener( 'wheel', onMouseWheel, false );
+        window.addEventListener( 'resize', onWindowResize, false );
+
+    }
+
+    function animate() {
+
+        requestAnimationFrame( animate );
+        renderer.render( scene, camera );
+
+    }
+
+    function onMouseWheel( event ) {
+
+        event.preventDefault();
+
+        camera.position.y -= event.deltaY * 0.005;
+
+        // prevent scrolling beyond a min/max value
+
+        camera.position.clampScalar( 0, 10 );
+
+    }
 
     function onWindowResize() {
 
@@ -31,69 +73,6 @@
         renderer.setSize( window.innerWidth, window.innerHeight );
 
     }
-    //end of "Adding Responsiveness"
-
-    //Adding Controls
-    var controls = new THREE.OrbitControls( camera );
-
-    //controls.update() must be called after any manual changes to the camera's transform
-    controls.update();
-    //end of "Adding Controls"
-
-    //Setup Lighting
-    var ambientLight = new THREE.AmbientLight( 0x101010 ); // soft white light
-    scene.add( ambientLight );
-
-    renderer.shadowMap.enabled = true;
-    renderer.shadowMap.type = THREE.PCFSoftShadowMap; // default THREE.PCFShadowMap
-
-    //Create a DirectionalLight and turn on shadows for the light
-    var light = new THREE.DirectionalLight( 0xffffff, 0.5  );
-    light.position.set( 0, 1, 0 ); 			//default; light shining from top
-    light.castShadow = true;            // default false
-    scene.add( light );
-
-    //Set up shadow properties for the light
-    light.shadow.mapSize.width = 512;  // default
-    light.shadow.mapSize.height = 512; // default
-    light.shadow.camera.near = 0.5;    // default
-    light.shadow.camera.far = 500;     // default
-
-
-    //Create a helper for the shadow camera (optional)
-    //var helper = new THREE.CameraHelper( light.shadow.camera );
-    //scene.add( helper );
-    //end of lighting
-
-    var geometry = new THREE.BoxGeometry( 1, 1, 1 );
-    var material = new THREE.MeshPhongMaterial( { color: 0xffffff } );
-    var cube = new THREE.Mesh( geometry, material );
-    cube.castShadow = true;
-    scene.add( cube );
-
-    var pGeometry = new THREE.PlaneGeometry( 3, 3, 1 );
-    var pMaterial = new THREE.MeshPhongMaterial( {color: 0xf0f0f0, side: THREE.DoubleSide} );
-    var plane = new THREE.Mesh( pGeometry, pMaterial );
-    plane.position.y = -.9;
-    plane.rotation.x = Math.PI / 2;
-    plane.receiveShadow = true;
-    scene.add( plane );
-
-    camera.position.x = 5;
-
-    function animate() {
-        requestAnimationFrame( animate );
-
-        //rotate cube
-        cube.rotation.x += 0.01;
-        cube.rotation.y += 0.01;
-
-        //update controls
-        controls.update();
-
-        renderer.render( scene, camera );
-    }
-    animate();
 
 </script>
 </body>
