--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title>Chris Rohrer | Web Developer</title>
 
-	<link rel="icon" href="favicon.ico" type="image/png" />
+	<link rel="icon" href="favicon.png" type="image/png" />
 
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet">
@@ -20,15 +20,12 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Chris!</div>
-		<div class="tagline">Student | Wordpress | Illustrator | Blender</div>
+		<div class="tagline">Wordpress Developer | Webdesigner | Blender Enthusiast</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/chris-rohrer"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://twitter.com/rohrer_chris"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/users/10743159/chris?tab=profile"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/rohrerchris/"><i class="fab fa-linkedin"></i></a>
 			<a target="_blank" href="https://medium.com/@chrisrohrer"><i class="fab fa-medium"></i></a>
-			<a target="_blank" href="https://codepen.io/chris-rohrer/"><i class="fab fa-codepen"></i></a>
     </div>
 	</main>
 </body>
